--- a/server/package.json
+++ b/server/package.json
@@ -3,12 +3,25 @@
   "version": "1.0.0",
   "dependencies": {
     "@fake-stack-overflow/shared": "^1.0.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/multer": "^2.0.0",
+    "@types/passport": "^1.0.17",
+    "@types/passport-github2": "^1.2.9",
+    "@types/passport-google-oauth20": "^2.0.17",
+    "@types/sharp": "^0.31.1",
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-openapi-validator": "^5.6.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "mongoose": "8.9.2",
+    "multer": "^2.0.2",
     "nanoid": "^3.3.8",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
+    "sharp": "^0.34.4",
     "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "yaml": "^2.8.1"
@@ -19,6 +32,7 @@
     "@stryker-mutator/jest-runner": "^8.7.1",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.14.0",
     "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.8",
