--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "@types/passport-google-oauth20": "^2.0.17",
     "@types/sharp": "^0.31.1",
     "bcrypt": "^6.0.0",
+    "axios": "^1.12.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-openapi-validator": "^5.6.0",
