cache working + middleware added

--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["types"],
+  "include": ["types", "types/jwt.d.ts"],
   "exclude": ["node_modules"],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
