--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
     "axios": "^1.9.0",
+    "lucide-react": "^0.555.0",
     "mongodb": "^6.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
