--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "shared"
   ],
   "dependencies": {
+    "lucide-react": "^0.555.0",
     "react-easy-crop": "^5.5.3",
     "react-icons": "^5.5.0",
     "redis": "^5.10.0"
