--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.29.0",
+    "@chakra-ui/react": "^3.30.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fake-stack-overflow/shared": "^1.0.0",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
     "axios": "^1.9.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.555.0",
     "mongodb": "^6.16.0",
     "react": "^19.1.0",
